# clipd

./: Cargo.toml  Makefile  README.md
etc/: clipd.service
src/: cli.rs  clipboard.rs  container.rs  lib.rs  main.rs  util.rs
systemd/: clipd.service
