[package]
name = "clipd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
toml = "0.5"
serde = "1.0.137"
serde_derive = "1.0.137"
tabled = "0.7.0"
uuid = { version = "1.1.1", features = ["v4", "fast-rng"] }
x11-clipboard = "0.6.1"
atty = "0.2.14"